<resources>
    <string name="app_name">Twice</string>
    <string name="CONSUMER_KEY">H3qNM38a3TzDXpWz6yY1hknFy</string>
    <string name="CONSUMER_SECRET">GU4uxItEP3ZM926o1NcUP2gGbBoivm4cWge9dzxsvpJFLHLzRe</string>
    <string name="facebook_app_id">2143546422379391</string>
    <string name="fb_login_protocol_scheme">fb2143546422379391</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Layout related more than 2  -->
    <string name="share_id_tag">ID</string>
    <string name="share_password_tag">Password</string>
    <string name="share_email_tag">E-mail</string>
    <string name="share_next_tag">다음</string>
    <string name="share_register_tag">가입</string>


    <!-- Strings related to login -->
    <string name="prompt_email">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_button_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_button_save_id">Save ID</string>
    <string name="login_button_auto_Login">Auto Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="register_dialog_able_message">is usable, Do you use this ID?</string>
    <string name="register_dialog_able_message_negative">No</string>
    <string name="register_dialog_able_message_positive">Yes</string>
    <string name="register_dialog_ok">OK</string>
    <string name="register_id_check">확인</string>

    <!-- String related to Fragments -->
    <string name="consent_form_head">이용 약관 동의</string>
    <string name="consent_form_personal">개인정보 이용 동의서</string>
    <string name="consent_form_facebook">Facebook 정보 사용 동의서</string>
    <string name="consent_form_instagram">Instagram 정보 사용 동의서</string>
    <string name="consent_form_twitter">Twitter 정보 사용 동의서</string>
    <string name="twice_form_head">사용자 정보 입력</string>
    <string name="sns_item_title">SNS 계정 연동</string>
    <string name="sns_logout_title">로그아웃 </string>
    <string name="sns_form_complete">가입</string>

    <!-- String related to Main Activity -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="main_dialog_logout_message">로그아웃 하시겠습니까?</string>
    <string name="main_dialog_logout_positive">로그아웃</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="app_booking_tile">예약 게시물</string>
    <string name="app_account_title">계정</string>
    <string name="app_linkage_title">SNS 계정 연동</string>
    <string name="app_logout_title">로그아웃</string>
    <string name="app_setting_title">설정</string>
    <string name="app_about_title">About Twice</string>

    <string name="link_sns_facebook_title">Facebook</string>
    <string name="link_sns_twitter_title">Twitter</string>
    <string name="link_sns_instagram_title">Instagram</string>
    <string name="link_sns_instagram_login_text">Instagram으로 로그인</string>

    <!--String related to InquiryBookPost-->
    <string name="Inquiry_book_title">예약 게시물</string>

    <!--String related to Account-->
    <string name="account_TITLE">개인정보</string>
    <string name="account_ID">사용자 아이디</string>
    <string name="account_email">이메일</string>
    <string name="account_password">비밀번호 변경</string>
    <string name="account_signout">회원탈퇴</string>

    <!--String related to UpdatePassword-->
    <string name="update_password">비밀번호 변경</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="change_password">변경 비밀번호</string>
    <string name="change_password_ok">변경 비밀번호 확인</string>

    <!-- Strings related to Posting -->
    <string name="posting_done">완료</string>

    <!-- Strings related to Gallery -->
    <string name="action_done">확인</string>
    <string name="gallery_label">갤러리</string>

    <!-- Preference Strings -->
    <string name="pref_title_load_item_per_once_facebook">Facebook</string>
    <string name="pref_title_load_item_per_once_twitter">Twitter</string>
    <string name="pref_title_load_item_per_once_instagram">Instagram</string>
    <string name="pref_title_load_item_per_once">타임라인 갯수 설정</string>
    <string name="pref_summary_load_item_per_once">1회에 읽어오는 게시글 수를 SNS별로 설정합니다.</string>

    <!-- Timeline Load Count Pref -->
    <string-array name="pref_load_item_titles">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_load_item_values">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- SNS 개인정보 관련 string-->
    <string name="clickthebuttonSNS">Twice의 원활한 사용을 위하여 SNS를 연동합니다.\n 해당 페이지에서 SNS 연동을 관리할 수 있습니다. \n 연동이후 우측 하단의 완료 버튼을 눌러주세요</string>
    <string name="authwithSNS">각 계정은 개인정보 동의사항에 동의한 후에 연동할 수 있습니다. \n아래의 버튼을 눌러 SNS계정과 연동할수 있습니다.</string>
    <string name="facebookConnect">Facebook의 계정을 연결하시려면 여기를 눌러주세요</string>
    <string name="instagramConnect">Instargram 계정을 연결하시려면 여기를 눌러주세요</string>
    <string name="twitterConnect">Twitter 계정을 연결하시려면 여기를 눌러주세요</string>
</resources>
