<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_related_user"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_account"
            android:title="@string/app_account_title"/>
        <item
            android:id="@+id/drawer_link"
            android:title="@string/app_linkage_title" />

        <item
            android:id="@+id/drawer_logout"
            android:title="@string/app_logout_title" />
    </group>

    <group android:id="@+id/drawer_menu_related_app">

        <item
            android:id="@+id/drawer_app_setting"
            android:title="@string/app_setting_title" />

        <item
            android:id="@+id/drawer_app_developers"
            android:title="@string/app_about_title" />

    </group>
</menu>