<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/twice_form_head_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/registFragmentHeadBack"
        android:textColor="@color/registFragmentHeadFore"
        android:gravity="center"
        android:textSize="@dimen/regist_font_size"
        android:textStyle="bold"/>

    <!-- ID -->
    <LinearLayout
        android:id="@+id/twice_linear_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/twice_form_head_text"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25">

            <AutoCompleteTextView
                android:id="@+id/twice_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/share_id_tag"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/twice_duplicate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.75"
            android:text="@string/register_id_check" />
    </LinearLayout>

    <!-- Password -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/twice_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twice_linear_id">

        <EditText
            android:id="@+id/twice_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_password_tag"
            android:maxLines="1"
            android:singleLine="true"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Recover Email -->
    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twice_password_edit">

        <AutoCompleteTextView
            android:id="@+id/twice_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_email_tag"
            android:maxLines="1"
            android:singleLine="true"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/twice_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="3dp"
        />

</RelativeLayout>