<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/clickthebuttonSNS"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/authwithSNS" />


            <Button
                android:id="@+id/facebookinfobtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/SNSRegister"
                android:clickable="true"
                android:onClick="facebookinfoBtn"
                android:text="@string/facebookConnect"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/facebookinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/sns_form_facebook"
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/facebook_Auth_AgreeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="facebookAgreeBtn"
                    android:text="동의"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/SNSRegister"
                android:clickable="true"
                android:text="@string/instagramConnect"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/instargraminfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#aaaaaa" />

            <Button
                android:id="@+id/twitterinfobtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/SNSRegister"
                android:clickable="true"
                android:text="@string/twitterConnect"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#aaaaaa" />

            <TextView
                android:id="@+id/twitterinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/sns_form_twitter"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/twitter_Auth_AgreeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="twitterAgreeBtn"
                    android:text="동의"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/sns_register_bottom_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#ffffff"
        android:gravity="end">

        <Button
            android:id="@+id/sns_form_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp" />
    </LinearLayout>

</RelativeLayout>