<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/twice_form_head_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/registFragmentHeadBack"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/HeadTextColor"
        android:textSize="@dimen/regist_font_size"
        android:textStyle="bold" />

    <!-- ID -->
    <LinearLayout
        android:id="@+id/twice_linear_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twice_form_head_text"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/register_padding"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25">

            <AutoCompleteTextView
                android:id="@+id/twice_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/share_id_tag"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/twice_duplicate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.75"
            android:background="@color/white"
            android:text="@string/register_id_check"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/twice_id_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twice_linear_id"
        android:layout_marginHorizontal="@dimen/register_padding"
        android:text="ID는 알파벳 대,소문자, 숫자만 가능합니다." />

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/twice_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twice_id_notice"
        android:paddingHorizontal="@dimen/register_padding">

        <EditText
            android:id="@+id/twice_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/share_password_tag"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/twice_password_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/twice_password_edit"
        android:layout_marginHorizontal="@dimen/register_padding"
        android:text="Password는 8자리 이상 알파벳 대,소문자,숫자만 가능합니다." />

    <!-- Recover Email -->

    <Button
        android:id="@+id/twice_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/registFragmentHeadBack"
        android:padding="3dp"
        android:textColor="@color/white" />

</RelativeLayout>